@@ -16,24 +16,34 @@
 
 package org.springframework.kafka.config;
 
+import org.apache.kafka.streams.StreamsBuilder;
+import org.apache.kafka.streams.Topology;
+
 /**
- * A customizer for the {@link StreamsBuilderFactoryBean} that is implicitly created by
- * {@link org.springframework.kafka.annotation.EnableKafkaStreams}. If exactly one
- * implementation of this interface is found in the application context (or one is marked
- * as {@link org.springframework.context.annotation.Primary}, it will be invoked after the
- * factory bean has been created and before it is started.
+ * A customizer for infrastructure components such as the {@code StreamsBuilder} and
+ * {@code Topology}. It can be provided to the {@link StreamsBuilderFactoryBean} which
+ * will apply the changes before creating the stream.
  *
  * @author Gary Russell
- * @since 2.3
+ * @since 2.4.1
  *
  */
-@FunctionalInterface
-public interface StreamsBuilderFactoryBeanCustomizer {
+public interface KafkaStreamsInfrastructureCustomizer {
 
 	/**
-	 * Configure the factory bean.
-	 * @param factoryBean the factory bean.
+	 * Configure the builder.
+	 * @param builder the builder.
 	 */
-	void configure(StreamsBuilderFactoryBean factoryBean);
+	default void configureBuilder(StreamsBuilder builder) {
+		// no-op
+	}
+
+	/**
+	 * Configure the topology.
+	 * @param topology the topology
+	 */
+	default void configureTopology(Topology topology) {
+		// no-op
+	}
 
 }
